# bolao_copa

./: .gitignore  CLAUDE.md  README.md  app.py  bolaodacopa-496702-2ad378872f88.json  check_templates.py  config.py  estado.py  pyproject.toml  teste_gsheets.py  whatsapp.py
.github/workflows/: deploy.yml
deploy/: bolao.service  nginx.conf
handlers/: aposta.py  apostas_dia.py  botao.py  calendario.py  detalhe_apostador.py  detalhe_jogo.py  ranking.py  regras.py  texto.py
scripts/: apostas_automaticas.py  atualizar_resultados.py  enviar_lembretes.py
sheets/: aposta_automatica.py  apostas.py  calendario.py  client.py  detalhe_apostador.py  detalhe_jogo.py  ranking.py  teste_gsheets.py
utils/: flags.py
whatsapp/: sender.py  webhook.py
