[project]
name = "bolao-copa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.3",
    "gspread>=6.2.1",
    "gunicorn>=26.0.0",
    "oauth2client>=4.1.3",
    "pandas>=3.0.3",
    "python-dotenv>=1.1.0",
    "requests>=2.32.0",
]
